fix: adding word wrapping

--- a/src/app/pages/chat/components/message/message.component.scss
+++ b/src/app/pages/chat/components/message/message.component.scss
@@ -51,6 +51,11 @@
   }
 
   &__text {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
+    line-break: strict;
+    -webkit-hyphens: auto; -ms-hyphens: auto; hyphens: auto;
     color: #f5f5f5;
   }
 
